syntax = "proto3";

package auth;

service AuthService {
  rpc LocalLogin (LocalLoginData) returns (JWTToken){}
  rpc LocalRegister(LocalRegisterData) returns (GrpcStatus){}
}


message LocalRegisterData {
  string userEmailId = 1;
  string userPassword = 2;
}

message LocalLoginData {
  string userEmailId = 1;
  string userPassword = 2;
}

message JWTToken {
  string grpcStatus = 1;
  string accessToken = 2;
  string refreshToken = 3;
}

message GrpcStatus {
  int32 grpcStatus = 1;
}

